# oidc-connect

./: .env.example  Makefile  README.md  manage.py  pyproject.toml
oidc_app/: asgi.py  settings.py  urls.py  wsgi.py
oidc_app/authentication/: apps.py  views.py
oidc_app/core/: backends.py  middleware.py  oidc_logout.py
oidc_app/templates/: home.html
oidc_app/templates/registration/: login.html
