[tool.poetry]
name = "oidc-connect"
version = "0.1.0"
description = ""
authors = ["Hesbon5600 <hesbonkiptoo5600@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
mozilla-django-oidc = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
